# OCAv2

_templates/: _tmp_mbed_thingsboard_peer.cpp
cubeless-alpha/: .gitignore  CMakeLists.txt  platformio.ini
cubeless-alpha/src/: main.cpp
dwmq-bravo/: .gitignore  CMakeLists.txt  partitions.csv  platformio.ini
dwmq-bravo/src/: CMakeLists.txt  main.cpp
water-pixel-alpha/: .gitignore  CMakeLists.txt  partitions.csv  platformio.ini
water-pixel-alpha/src/: .gitignore  CMakeLists.txt  main.cpp
